[tool.poetry]
name = "vietnamese-correction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.0"
torch = "^2.5.0"
nltk = "^3.9.1"
pandas = "^2.2.3"
unidecode = "^1.3.8"
sentencepiece = "^0.2.0"
datasets = "^3.0.2"
evaluate = "^0.4.3"
accelerate = "^1.0.1"
sacrebleu = "^2.4.3"
jiwer = "^3.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
